--- a/src/pages/auth/auth.css
+++ b/src/pages/auth/auth.css
@@ -1,4 +1,4 @@
-.auth-container{
+.auth-container {
     background-image: url(../../assets/images/-4-ans_frontend_assets.webp);
     width: 100vw;
     height: 100vh;
@@ -9,76 +9,112 @@
     justify-content: center;
 }
 
-.auth-wrapper{
+.auth-wrapper {
     background-color: #fff;
     color: #000;
-    padding: 2rem 4rem;
+    /* padding: 2rem 4rem; */
     border-radius: 2px;
+    width: 900px
 }
 
-.logo-wrapper{
+.logo-wrapper {
     display: flex;
     gap: 10px;
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    padding: 20px;
 }
-.logo{
-    font-size: 36px;
-    color: red;
+
+.logo img{
+    width: 160px;
 }
-.logo-description{
+
+.logo-description {
     color: #636466;
     font-size: 16px;
     font-weight: bold;
 }
 
-h2 {
-    padding: 20px;
-    margin: 0 0 30px;
-  }
-   .login-box {
+.login-title{
+    color: #282829;
+    font-size: 15px;
+    font-weight: 500;
+    font-family: -apple-system, system-ui, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
+    border-bottom-style: solid;
+    border-width: 1px;
+    border-color: #dee0e1;
+    padding: 10px 0px;
+    
+}
+
+.login-box {
     padding: 20px;
     display: flex;
-    flex-direction: row-reverse;
-    
+    justify-content: space-between;
+    align-items: center;
+}
 
-  }
- .google-button img{
+.forget-login-button{
+    display: flex;
+    justify-content: space-between;
+}
+
+.google-button img {
     height: 20px;
     width: 20px;
 
- }
- .google-button{
+}
+
+.google-button {
     display: flex;
-align-items: center;
-justify-content: center;
-padding: 0.5rem;
-width: 290px;
+    align-items: center;
+    justify-content: center;
+    padding: 0.5rem;
+    width: 290px;
 
 
- }
- .right{
+}
+
+.right {
     display: flex;
     flex-direction: column;
-    width: 49%;
- }
- .fb-button img{
+    width: 50%;
+    justify-content: center;
+    padding: 0px 20px;
+}
+
+.fb-button img {
     height: 30px;
     width: 30px;
- }
- .fb-button{
-display: flex;
-align-items: center;
-justify-content: center;
-width: 290px;
+}
+
+.fb-button {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 290px;
 
 
- }
- .left{
-    width: 49%;
- }
- .language{
+}
+
+.text-field{
+    height: 30px !important;
+
+}
+
+.left {
+    width: 50%;
+    display: flex;
+    justify-content: center;
+    gap: 10px;
+    flex-direction: column;
+    border-right-style: solid;
+    border-width: 1px;
+    border-color: #dee0e1;
+}
+
+.language {
     align-items: center;
     border-bottom: 1px solid #dee0e1;
     border-top: 1px solid #dee0e1;
@@ -88,8 +124,24 @@ width: 290px;
     justify-content: center;
     padding: 15px;
 }
+
 .login {
     border-bottom: 1px solid #dee0e1;
-  
 }
- 
+
+
+.terms-condition {
+    font-size: 13px;
+    color: #939598;
+    font-family: -apple-system, system-ui, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
+}
+
+.about-quora{
+    background-color: #F1F2F2;
+    font-size: x-small;
+    
+}
+.dialog{
+    width: 100%;
+    
+}
